--- a/index.html
+++ b/index.html
@@ -3,11 +3,58 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>COVID19</title>
 </head>
+
 <body>
-	
+    <div class="container">
+        <header class="header">
+            <h1>COVID19</h1>
+        </header>
+        <div class="content">
+            <div class="content__search">
+                <input type="text" class="searchbar" placeholder="Search for a country ...">
+            </div>
+            <div class="content__countries">
+                <div class="content__countries-card">
+                    <img class="content__countries-card-flag" src="images/china.png" alt="">
+                    <p class="content__countries-card-info">
+                    	<span class="content__countries-card-info--boldest">China</span>
+                    	<span class="content__countries-card-info--bold">Region: <span class="content__countries-card-info--light">Asia</span></span>
+                    </p>
+                </div>
+                <div class="content__countries-card">
+                    <img class="content__countries-card-flag" src="images/spain.png" alt="">
+                </div>
+                <div class="content__countries-card">
+                    hello
+                </div>
+                <div class="content__countries-card">
+                    hello
+                </div>
+                <div class="content__countries-card">
+                    hello
+                </div>
+                <div class="content__countries-card">
+                    hello
+                </div>
+                <div class="content__countries-card">
+                    hello
+                </div>
+                <div class="content__countries-card">
+                    hello
+                </div>
+                <div class="content__countries-card">
+                    hello
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="overlay hidden"></div>
 </body>
+
 </html>
