Add countries and their respective country flags

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script defer src="script.js"></script>
     <title>COVID19</title>
 </head>
 
@@ -20,37 +21,6 @@
                 <input type="text" class="searchbar" placeholder="Search for a country ...">
             </div>
             <div class="content__countries">
-                <div class="content__countries-card">
-                    <img class="content__countries-card-flag" src="images/china.png" alt="">
-                    <p class="content__countries-card-info">
-                    	<span class="content__countries-card-info--boldest">China</span>
-                    	<span class="content__countries-card-info--bold">Region: <span class="content__countries-card-info--light">Asia</span></span>
-                    </p>
-                </div>
-                <div class="content__countries-card">
-                    <img class="content__countries-card-flag" src="images/spain.png" alt="">
-                </div>
-                <div class="content__countries-card">
-                    hello
-                </div>
-                <div class="content__countries-card">
-                    hello
-                </div>
-                <div class="content__countries-card">
-                    hello
-                </div>
-                <div class="content__countries-card">
-                    hello
-                </div>
-                <div class="content__countries-card">
-                    hello
-                </div>
-                <div class="content__countries-card">
-                    hello
-                </div>
-                <div class="content__countries-card">
-                    hello
-                </div>
             </div>
         </div>
     </div>
