--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script defer src="https://code.highcharts.com/highcharts.js"></script>
     <script defer src="script.js"></script>
     <title>COVID19</title>
 </head>
@@ -24,7 +25,11 @@
             </div>
         </div>
     </div>
-    <div class="overlay hidden"></div>
+    <div class="overlay hidden">
+        <div class="overlay__content">
+            <div class="overlay__close">x</div>
+        </div>
+    </div>
 </body>
 
 </html>
