--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" href="./images/favicon.png">
     <link rel="stylesheet" type="text/css" href="style.css">
     <script defer src="https://code.highcharts.com/highcharts.js"></script>
     <script defer src="script.js"></script>
